Cleans up folder structure.

--- a/01-geoLocMap.html
+++ b/01-geoLocMap.html
@@ -1,18 +1,5 @@
 <!DOCTYPE html>
 <html>
-
-<!-- 
-    geoLocMap.html by Bill Weinman 
-    <http://bw.org/contact/>
-    created 2011-07-07
-    updated 2011-07-20
-
-    Copyright (c) 2011 The BearHeart Group, LLC
-    This file may be used for personal educational purposes as needed. 
-    Use for other purposes is granted provided that this notice is
-    retained and any changes made are clearly indicated as such. 
--->
-
 <head>
     <title>
         Geolocation Map Test (1.1.3)
@@ -69,7 +56,7 @@
 
                 mapMarker = new google.maps.Marker({
                     position: latlng,
-                    title:"You are here."
+                    title:"Mr. Rahul Jain, You are here."
                 });
                 mapMarker.setMap(map);
             }
