Navigates between pages.

--- a/01-geoLocMap.html
+++ b/01-geoLocMap.html
@@ -102,6 +102,7 @@
     </script>
 </head>
 <body>
+    <a href="index.html">Back to Home Menu</a>
     <div id="map_canvas"></div>
 </body>
 </html>
