--- a/02-coordinates-start.html
+++ b/02-coordinates-start.html
@@ -1,18 +1,5 @@
 <!DOCTYPE html>
 <html>
-
-<!-- 
-    coordinates.html by Bill Weinman 
-    <http://bw.org/contact/>
-    created 2011-06-15
-    updated 2011-07-20
-
-    Copyright (c) 2011 The BearHeart Group, LLC
-    This file may be used for personal educational purposes as needed. 
-    Use for other purposes is granted provided that this notice is
-    retained and any changes made are clearly indicated as such. 
--->
-
 <head>
     <title>
         HTML5 Geolocation
@@ -87,6 +74,8 @@
 <body>
 
 <div id="content">
+    
+        <a href="index.html">Go Back to Home Menu</a>
 
     <h1> 
         HTML5 Geolocation
