Creates a basic map using hardcoded lat, lon.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <li>
         <a href="01-geoLocMap.html">Click this link Watch yourself on Google Map: Lat, Long</a>
       </li>
+      <li>
+        <a href="javascript-api.html"> javascript-api Tutorial by Udacity </a>
+      </li>
     </ul>
   </body>
 </html>
