--- a/javascript-api.html
+++ b/javascript-api.html
@@ -1,6 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <style>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>JavaScript API</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
       html, body {
         font-family: Arial, sans-serif;
         height: 100%;
@@ -11,8 +16,8 @@
         height: 100%;
       }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <div id="map"></div>
 
     <script>
@@ -23,6 +28,24 @@
           center: {lat: 40.7413549, lng: -73.9980244},
           zoom: 13
         });
+
+        var tribeca = {lat: 40.719526, lng: -74.0089934}; // position to be marked
+
+        // There are bunch of things we can specify, We can make it draggable, so that when it appears, the user can move around, We could specify an animations so that it doesn't just appear on the maps, it drops, for example, let's test this out.
+        var marker = new google.maps.Marker({
+          position: tribeca, // Markers need to know where it should appear
+          map: map, // All the marker needs to know which is the map it should appear on
+          title: 'First Marker!'
+        });
+
+        var infoWindow = new google.maps.InfoWindow({
+          content: 'Do you ever feel like an InforWindow, floating through the wind, ready to start again?' 
+        });
+
+        marker.addListener('click', function () {
+          infoWindow.open(map, marker); // 2nd argument marker is optional, if we didn't pass the marker, we would need to give the infoWindow a position property so that it has a place to open.
+        });
+
       }
     </script>
 
