Creates map having multiple marker, that displays information window when clicked.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
   <body>
     <ul>
       <li>
-        <a href="02-coordinates-start.html">Click this link to Watch your coordinates: Lat, Long</a>
+        <a href="02-coordinates-start.html">Click this link to Watch your coordinates: Lat, Long. </a>
       </li>
       <li>
-        <a href="01-geoLocMap.html">Click this link Watch yourself on Google Map: Lat, Long</a>
+        <a href="01-geoLocMap.html">Click this link Watch yourself on Google Map: Lat, Long. </a>
       </li>
       <li>
-        <a href="javascript-api.html"> javascript-api Tutorial by Udacity </a>
+        <a href="javascript-api.html"> Single Marker, Pop up on click. </a>
+      </li>
+      <li>
+        <a href="multiple-markers.html"> Multiple Markers, Information window on click. </a>
       </li>
     </ul>
   </body>
