--- a/multiple-markers.html
+++ b/multiple-markers.html
@@ -97,7 +97,7 @@
       }
     </script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=key=AIzaSyBWzhKouh-Nbk1jBJF2LqB8YPEYwZ20kPA&v=3&v=3&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWzhKouh-Nbk1jBJF2LqB8YPEYwZ20kPA&v=3.35&callback=initMap"
       async
       defer
     ></script>
