Fixes eventListener crash and version error.

--- a/multiple-markers.html
+++ b/multiple-markers.html
@@ -90,7 +90,7 @@
           infowindow.setContent("<div>" + marker.title + "</div>");
           infowindow.open(map, marker);
           // Make sure the marker property is cleared if the infowindow is closed.
-          infowindow.addEventListener("closeclick", function() {
+          infowindow.addListener("closeclick", function() {
             infowindow.setMarker(null);
           });
         }
